[package]
name = "p3-field"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
p3-util = { path = "../util" }
num-bigint = { version = "0.4.3", default-features = false }
num-traits = { version = "0.2.18", default-features = false }

itertools = { version = "0.12.0", default-features = false, features = ["use_alloc"] }
rand = { version = "0.8.5", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
